[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[project]
name = "python_base"
version = "0.0.1"
description = "Template Python project pre-configured for uv dependency management."
requires-python = ">=3.10"
readme = "README.md"
keywords = ["template", "uv", "python"]
authors = [{name = "Nipun Jindal", email = "njindal@adobe.com"}]
# Runtime dependencies
dependencies = [
  "torch",
  "torchvision"
]

[project.optional-dependencies]
# Development-only utilities
dev = [
  "pytest",
  "ruff",
  "ty",
  "toml-sort",
  "shfmt-py",
  "ipykernel"
]

[tool.ruff]
# Ruff-format configuration.
line-length = 120
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv"
]
# Assume Python 3.10
target-version = "py310"
